<resources>
    <string name="app_name">Psycho App</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_mail">Email</string>
    <string name="register_hint_birth">Birthday</string>
    <string name="register_hint_password">Password</string>
    <string name="register_btn_register">Continue</string>
    <string name="login_lbl_no_account">Don\'t have an account? Create one</string>
    <string name="register_error">Please enter a valid %s.</string>
    <string name="register_error_blank">Please enter a valid %s.</string>
    <string name="register_error_long">The %s entered is too long.</string>
    <string name="register_error_long_l">The %s entered is too long. %s</string>
    <string name="register_error_short">The %s entered is too short.</string>
    <string name="register_error_short_l">The %s entered is too short. %s</string>
    <string name="register_error_invalid">The %s entered is invalid.</string>
    <string name="login_error_401">Incorrect email and password.</string>
    <string name="login_lbl_fingerprint">Fill in the details or place your finger on the fingerprint scanner to log in.</string>
    <string name="login_lbl_fingerprint_no_lockscreen">Please enable lockscreen security in your device\'s Settings to log in with your fingerprint.</string>
    <string name="title_my_exams">My Exams</string>
    <string name="item_me_date">Date: %s</string>
    <string name="item_me_score">Score: %s</string>
    <string name="fingerprint_title">Place your finger in the scanner to unlock the app.</string>
    <string name="item_me_title">Exam Name</string>
    <string name="exam_details_company">Company Name</string>
    <string name="exam_details_title">Exam Title</string>
    <string name="exam_details_description">Exam description.</string>
    <string name="exam_details_btn_start">Take Exam</string>
    <string name="exam_details_tests">Test List</string>

    <string name="fragment_test_details_title">Test Name</string>
    <string name="fragment_test_details_description">Test Description</string>
    <string name="fragment_test_details_lbl_time">Time:</string>
    <string name="fragment_test_details_time">1 min</string>
    <string name="fragment_test_details_lbl_maxscore">Max Score:</string>
    <string name="fragment_test_details_maxscore">100pts</string>
    <string name="fragment_test_details_lbl_weight">Weight:</string>
    <string name="fragment_test_details_weight">30%</string>
    <string name="fragment_test_details_instructions">Test instructions on the reverse of the package. Call customer service if package is not sealed.</string>
    <string name="fragment_test_details_btn_start">Start Test</string>
    <string name="exam_results_lbl_title">Exam Results</string>
    <string name="exam_results_lbl_name">Exam Name:</string>
    <string name="exam_results_lbl_date">Exam Date:</string>
    <string name="exam_results_lbl_score">Exam Score:</string>
    <string name="exam_results_btn_finish">Mark as done</string>
</resources>
